hphp/hack/test/pocket_universes/naming/dup_check.bad.php.exp
File "dup_check.bad.php", line 9, characters 15-15:
Pocket Universe case type A:@F:@T is already declared in A:@F (Naming[2101])
File "dup_check.bad.php", line 12, characters 12-12:
Pocket Universe case value A:@F::x is already declared in A:@F (Naming[2101])
File "dup_check.bad.php", line 25, characters 8-8:
Pocket Universe enumeration A:@F is already declared in A (Naming[2101])
